fixing overflow function and adjust navbar height

--- a/src/App.css
+++ b/src/App.css
@@ -41,3 +41,8 @@ html, body {
     transform: rotate(360deg);
   }
 }
+
+/* .dark-mode {
+  background-color: #333;
+  color: #fff;
+} */
